# ProgettoHCI2

./: ProgettoEsameHCI2.ipr  ProgettoEsameHCI2.iws  local.properties
HelloRPC/: settings.gradle
HelloRPC/app/: build.gradle
HelloRPC/app/src/androidTest/java/com/example/hellorpc/: ExampleInstrumentedTest.java
HelloRPC/app/src/main/: AndroidManifest.xml
HelloRPC/app/src/main/java/com/example/hellorpc/: CustomCallable.java  MainActivity.java  TaskRunner.java
HelloRPC/app/src/main/jni/: Android.mk  CMakeLists.txt  carclient.cpp  carclient.h
HelloRPC/app/src/main/jni/include/common/: CommonStructs.hpp  UpdatableContainer.hpp  UpdatableObject.hpp
HelloRPC/app/src/main/jni/include/common/common_utils/: FileSystem.hpp  ScheduledExecutor.hpp  Utils.hpp
HelloRPC/app/src/main/jni/include/physics/: FastPhysicsEngine.hpp  PhysicsBody.hpp  PhysicsEngineBase.hpp  World.hpp
HelloRPC/app/src/main/jni/include/sensors/: SensorBase.hpp
HelloRPC/app/src/main/jni/include/sensors/barometer/: BarometerSimple.hpp  BarometerSimpleParams.hpp
HelloRPC/app/src/main/jni/include/sensors/gps/: GpsSimple.hpp  GpsSimpleParams.hpp
HelloRPC/app/src/main/jni/include/sensors/imu/: ImuSimple.hpp  ImuSimpleParams.hpp
HelloRPC/app/src/main/jni/include/sensors/magnetometer/: MagnetometerSimple.hpp  MagnetometerSimpleParams.hpp
HelloRPC/app/src/main/res/layout/: activity_main.xml
HelloRPC/app/src/main/res/values/: strings.xml
HelloRPC/app/src/main/res/xml/: network_security_config.xml
HelloRPC/app/src/test/java/com/example/hellorpc/: ExampleUnitTest.java
HelloRPC/gradle/wrapper/: gradle-wrapper.properties
